spacing fix

--- a/styles/Post.module.sass
+++ b/styles/Post.module.sass
@@ -44,42 +44,17 @@
 .postContent
   padding: 0 40px 0 30px
   margin-bottom: 86px
-  // font-weight: 400
-  // line-height: 1.75
-  // color: var(--color-text)
-  // font-size: 100% !important
-  // p, li
-  //   margin-bottom: 1rem
-  //   line-height: 1.75
-  // strong, b
-  //   font-weight: 700
-  // em, i
-  //   font-style: italic
-  // h1, h2, h3, h4, h5, h6
-  //   color: var(--color-highlight)
-  //   font-weight: 600
-  // h1, h2, h3, h4, h5
-  //   margin: 3rem 0 1.38rem
-  //   line-height: 1.3
   // h1
-  //   margin-top: 0
-  //   font-size: 3.052rem
+  //   letter-spacing: -0.055em
   // h2
-  //   font-size: 2.441rem
-  // h3
-  //   font-size: 1.953rem
-  // h4
-  //   font-size: 1.563rem
-  // h5
-  //   font-size: 1.25rem
-  // small,
-  // .text_small
-  //   font-size: 0.75rem
+  //   letter-spacing: -0.045em
+  // h3, h4, h5, h6
+  //   letter-spacing: -0.015em
   img
     max-width: 100%
     // margin: 30px 0 14px
     // margin: 20px 0 14px
-    margin-top: 2rem
+    margin-top: 1.5rem
     &[src$='#cover']
       width: 400px
   a
